tests/aster/x/mochi/rosetta/determine-sentence-type.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/determine-sentence-type.mochi:31:14

 31 |     let ch = substring(s, i, i+1)
    |              ^

help:
  Declare substring before use
